Changing App Theme

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -3,5 +3,7 @@
     "language_button": "تغيير اللغة",
     "english": "english",
     "arabic": "العربية",
-    "default": "الافتراضى"
+    "default": "افتراضى",
+    "light": "مضئ",
+    "dark": "مظلم"
 }
